[gd_scene load_steps=3 format=3 uid="uid://di8q8lxbflyfb"]

[ext_resource type="Script" path="res://ui/victory_screen.gd" id="1_57u58"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rfij"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 0.172549)

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57u58")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -285.0
offset_right = 960.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3rfij")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 136
text = "VILLAGE DECIMATED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "TIME: 0:00.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="NextMapButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Next Map"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NextMapButton" to="." method="_on_next_map_button_pressed"]
